--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header .logo
   position: absolute;
   top: 15px;
   left: 15px;
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' fill='white'><rect y='6' width='30' height='4'/><rect y='13' width='30' height='4'/><rect y='2[...]");
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' fill='white'><rect y='6' width='30' height='4'/><rect y='13' width='30' height='4'/><rect y='20' width='30' height='4'/></svg>");
   background-repeat: no-repeat;
   background-size: 30px 30px;
   background-position: center;
@@ -54,7 +54,7 @@ header .logo
   transform: rotate(0deg) scale(1);
 }
 .toggle.active::before {
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' fill='white'><line x1='5' y1='5' x2='25' y2='25' stroke='white' stroke-width='4'/><line x1='25[...]");
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' fill='white'><line x1='5' y1='5' x2='25' y2='25' stroke='white' stroke-width='4'/><line x1='25' y1='5' x2='5' y2='25' stroke='white' stroke-width='4'/></svg>");
   opacity: 1;
   transform: rotate(180deg) scale(1.1);
 }
