--- a/pod3css.css
+++ b/pod3css.css
@@ -18,16 +18,21 @@ scrollbar-width: none;
     color: #fff;
     margin: 15px;
 }
-.lista{
+.lista {
     color: #fff;
     margin: 5px;
-    
+    font-size: 0.85em;        
+    text-align: justify;      
+    width: 80%;               
+    margin-left: auto;
+    margin-right: auto;       
 }
-li{
+
+li {
     list-style-type: disc;
-    line-height: 3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1em;
+    line-height: 2em;
+    text-align: justify;      
+    font-size: 0.85em;        
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
